# sudoko-solver

./: README.md  stack.yaml  sudoku-solver.cabal
.stack-work/: stack.sqlite3
src/: Game.hs  Logic.hs  Main copy.hs  Main.hs  Main2.hs  Models.hs  Render.hs  Solver.hs
sudoku-solver/: sudoku-solver.cabal
sudoku-solver/src/: Main.hs  Main2.hs  Main3.hs
templates/: Models.hs
