name:                sudoku-solver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sudoku-solver#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.12
extra-source-files:  README.md
                     CHANGELOG.md

executable sudoku-solver
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:      Game
                     ,Logic
                     ,Render
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , array
                     , MonadRandom
                     , murmur-hash
  ghc-options:        -D2 -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
